stopgap record attempt fix

--- a/styles/video/attemptboard.css
+++ b/styles/video/attemptboard.css
@@ -157,8 +157,10 @@
     align-self: center;
     justify-content: center;
     align-content: center;
-    padding: 0.4em;
+    /* padding: 0.4em; */
 	z-index: var(--zIndexRecordNotifications);
+	font-size: xxx-large;
+	font-weight: bold;
 }
 
 .attemptBoard .recordNotification.attempt {
@@ -171,22 +173,28 @@
     align-self: center;
     justify-content: center;
     align-content: center;
-    padding: 0.4em;
+    /* padding: 0.4em; */
+    font-size: 90%;
 	z-index: var(--zIndexRecordNotifications);
+	font-size: xxx-large;
+	font-weight: bold;
 }
 
 .attemptBoard .recordNotification.none {
 	display: grid;
 	grid-area: teamName-start/teamName-start/teamName-end/teamName-end;
-    background-color: var(--darkAttemptHighlightBackground);
-    color: var(--darkAttemptHighlightText);
+	/* background-color: var(--darkAttemptHighlightBackground); */
+    background-color: #00ff00;
+    /* color: var(--darkAttemptHighlightText); */
+	color: #00ff00;
     visibility: var(--showRecordNotifications);
     width: 100%;
     align-self: center;
     justify-content: center;
     align-content: center;
-    padding: 0.4em;
-	z-index: -10;
+    /* padding: 0.4em; */
+	z-index: var(--zIndexRecordNotifications);
+	font-size: xxx-large;
 }
 
 .hideBecauseRecord {
